--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,6 +1,7 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
 body{
+  font-family: "Outfit", sans-serif;
   background-color: #0f1110;
   color: white;
 }
